2000-06-27  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* Makefile.am (bindist): new target.

	* INSTALL: add instructions for doing a binary distribution.

	* development/tools/README.bin.example: update a bit. 

2000-06-26  Lior Silberman <slior@math.huji.ac.il>

	* src/lyxrc.C: 
	* lib/lyxrc.example: new lyxrc tag \set_color.

	* src/lyxfunc.C (Dispatch): 
	* src/commandtags.h: 
	* src/LyXAction.C: new lyxfunc "set-color".

	* src/LColor.[Ch] (setColor): new method to set colors from a lyxname
	and an x11name given as strings.

	* src/ColorHandler.[Ch] (updateColor): new method. Updates the GC
	cache when a color is changed.

2000-06-26  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* configure.in (INSTALL_SCRIPT): change value to
	${INSTALL} to avoid failures of install-script target.
	* lib/reLyX/configure.in (INSTALL_SCRIPT): ditto

2000-06-22  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* INSTALL: remove obsolete entry in "problems" section.

	* lib/examples/sl_*.lyx: update of the slovenian examples.

2000-06-21  Baruch Even <baruch.even@writeme.com>

	* src/buffer.[Ch]: remove isDviClean() and friends, which are now
	useless and cause problems.

2000-06-16  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/text2.C (PasteSelection): fix possible crash in cut and paste.

2000-06-15  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/text.C (SelectNextWord): protect against null pointers with
	old-style string streams. (fix from Paul Theo Gonciari
	<gptheo@yahoo.com>) 

2000-06-13  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* lib/examples/decimal.lyx: new example file from Mike Ressler.

2000-06-08  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/lyx_main.h: remove the act_ struct, which seems unused
	anyway. 

	* src/support/filetools.C (PutEnv): fix the code in case neither
	putenv() nor setenv() have been found.

	* INSTALL: mention the install-strip Makefile target.
